--- a/diego/nota_diego.tex
+++ b/diego/nota_diego.tex
@@ -261,14 +261,14 @@ S_2^{\rm{baro}}=\int d^4x\sqrt{-g}\,\,\left(\frac{p+\rho}{2}\right)\left[\dot\pi
 \end{equation}
 where\footnote{Coupling a barotropic fluid to FRW the conservation of the entropy current implies $\nabla_\mu J^{\mu}=\dot{b}+3Hb=0$.} 
 \begin{equation}
- c_s^2=\frac{b F_{bb}}{ F_b}=\frac{d p}{d\rho}=\frac{\dot{p}}{\dot{\rho}}=w-\frac{\dot{w}}{3H(1+w)}\,,  
+ c_s^2=\frac{b F_{bb}}{ F_b}=\frac{d p}{d\rho}=\frac{\dot{p}}{\dot{\rho}}=w-\frac{\dot{w}}{3H(1+w)}\,,  \label{eq:adiabatic}
 \end{equation}
 and it is fully determined by the equation of state as expected for a barotropic fluid. 
 Notice that the absence of ghosts, and gradient instabilities and superluminal modes imply respectively 
 \begin{equation}
 w>-1\,\qquad 0<c_s^2\leq1\ .
 \end{equation}
-Moreover the special functional dependence of $c_s^2$ on $w$ implies that  \questionAC{Why? By theremodyn?}
+Moreover, using $c_s^2(w)$ derived from \eqref{eq:adiabatic} we can rewrite the absence of gradient instabilities as a further constraint on the equation of state \questionAC{Why? By theremodyn?} 
 \begin{equation}
 w-\frac{\dot{w}}{3H(1+w)}>0\ , \label{eq:nogradbaro}
 \end{equation}
