--- a/diego/nota_diego.tex
+++ b/diego/nota_diego.tex
@@ -338,7 +338,7 @@ The entropy per particle is not constant in this case, and it can be identified 
 
 Explicitly we can write the lagrangian at quadratic order in the fluctuation around a fluid background configuration $\phi^0=t+\pi^0$ and $\phi^I=x^i+\pi^I$
 \begin{equation}
-S_2=\int d^4xd^4x\sqrt{-g}\left(\frac{p+\rho}{2}\right)\left[\dot\pi^2-c_s^2(\nabla\pi)^2+B\dot{\pi}_0 \nabla\pi+A \dot{\pi}_0^2\right]\ , 
+S_2=\int d^4xd^4x\sqrt{-g}\left(\frac{p+\rho}{2}\right)\left[\dot\pi^2-c_s^2(\nabla\pi)^2+2B\dot{\pi}_0 \nabla\pi+A \dot{\pi}_0^2\right]\ , 
 \end{equation}
 the sound speed is now 
 \begin{equation}
@@ -362,7 +362,7 @@ where
 \begin{equation}
     c_s^2\vert_{\rm{eff}}=c_s^2+\frac{B^2}{A}\,, 
 \end{equation}
-which shows that the contribution from the entropy mode is strictly positive.
+which shows that the contribution from the entropy mode is strictly positive. What is particularly interesting in this setup is that 
 \subsection{Scalar fluids}
 Here I will match the scalar fluids to the fluid EFTs developed so far. This will allow us to show in which sense the fluid EFT remains more general 
 
