Updates from Overleaf

--- a/diego/nota_diego.tex
+++ b/diego/nota_diego.tex
@@ -342,15 +342,15 @@ S_2=\int d^4xd^4x\sqrt{-g}\left(\frac{p+\rho}{2}\right)\left[\dot\pi^2-c_s^2(\na
 \end{equation}
 the sound speed is now 
 \begin{equation}
-c_s^2=    
+c_s^2= \frac{-b^2F_{bb}-2yF_y-F_{yy}+2byF_{by}}{yF_y-b F_b}\,.
 \end{equation}
-The mixing of the entropy mode with the phonons is given by 
+The mixing of the entropy mode with the phonons is given by \noteAC{I would change letter B, possibly $B=2C$}
 \begin{equation}
-B=    
+B=   2 \,\frac{by F_{by}-y F_y -y^2 F_{yy}}{y F_y-b F_b}\,,
 \end{equation}
 and the inertia of the entropy mode is
 \begin{equation}
-A=     
+A= \frac{y^2 F_{yy}}{y F_y-b F_b}\,.
 \end{equation}
 Crucially in this lagrangian only $p+\rho>0$ is necessary to avoid ghost instabilities, and $A>0$ is also necessary for thermodynamic stability, however at this level the speed of sound $c_s^2$ can be negative.
 
@@ -362,7 +362,12 @@ where
 \begin{equation}
     c_s^2\vert_{\rm{eff}}=c_s^2+\frac{B^2}{A}\,, 
 \end{equation}
-which shows that the contribution from the entropy mode is strictly positive. What is particularly interesting in this setup is that 
+which shows that the contribution from the entropy mode is strictly positive. Now the effective speed of sound controls the actual growth rate of the gradient instability 
+\begin{equation}
+\delta    
+\end{equation}
+
+
 \subsection{Scalar fluids}
 Here I will match the scalar fluids to the fluid EFTs developed so far. This will allow us to show in which sense the fluid EFT remains more general 
 
