--- a/diego/nota_diego.tex
+++ b/diego/nota_diego.tex
@@ -364,9 +364,10 @@ where
 \end{equation}
 which shows that the contribution from the entropy mode is strictly positive. Now the effective speed of sound controls the actual growth rate of the gradient instability 
 \begin{equation}
-\pi    
+\pi\sim e^{\Gamma t}\quad \rm{with}\quad \Gamma=\vert c_s\vert k/a     
 \end{equation}
-
+then requiring $\Gamma\ll H$ requires $c_s\ll H/\Lambda_{
+\rm{UV}}$, where $\Lambda_{\rm{UV}}\approx((1+w)\rho)^{1/4}$ is the scale 
 
 \subsection{Scalar fluids}
 Here I will match the scalar fluids to the fluid EFTs developed so far. This will allow us to show in which sense the fluid EFT remains more general 
