--- a/diego/nota_diego.tex
+++ b/diego/nota_diego.tex
@@ -327,6 +327,15 @@ which matching to the perfect fluid expression gives
 \begin{equation}
 \rho = - F+yF_y , \qquad p = F- b F_b \ .
 \end{equation}
+so that 
+\begin{equation}
+w=\frac{}    
+\end{equation}
+The adiabatic sound speed 
+\begin{equation}
+c_a^2=
+\end{equation}
+
 Notice that in this case the presence of $y$ makes the entropy per particle not fixed by the equation of state but still conserved along the flow lines as expected in the absence of dissipation. In the EFT language the entropy per particle current is nothing else than the Noether current associated to the shift symmetry in Eq.~\eqref{eq:shifttime}
 \begin{equation}
 J_s^{\mu}=-F_y u_\mu\quad \rm{s.t.}\quad \nabla_\mu J^\mu_s=0\ .
@@ -338,26 +347,26 @@ The entropy per particle is not constant in this case, and it can be identified 
 
 Explicitly we can write the lagrangian at quadratic order in the fluctuation around a fluid background configuration $\phi^0=t+\pi^0$ and $\phi^I=x^i+\pi^I$
 \begin{equation}
-S_2=\int d^4xd^4x\sqrt{-g}\left(\frac{p+\rho}{2}\right)\left[\dot\pi^2-c_s^2(\nabla\pi)^2+2B\dot{\pi}_0 \nabla\pi+A \dot{\pi}_0^2\right]\ , 
+S_2=\int d^4xd^4x\sqrt{-g}\left(\frac{p+\rho}{2}\right)\left[\dot\pi^2-\mathcal{C}_s(\nabla\pi)^2+2\mathcal{M}\dot{\pi}_0 \nabla\pi+\mathcal{A} \dot{\pi}_0^2\right]\ , 
 \end{equation}
 the sound speed is now 
 \begin{equation}
-c_s^2= \frac{-b^2F_{bb}-2yF_y-y^2F_{yy}+2byF_{by}}{yF_y-b F_b}\,.
+\mathcal{C}_s^2= \frac{-b^2F_{bb}-2yF_y-y^2F_{yy}+2byF_{by}}{yF_y-b F_b}\,.
 \end{equation}
 The mixing of the entropy mode with the phonons is given by \noteAC{I would change letter B, maybe $C$}
 \begin{equation}
-B=   \frac{by F_{by}-y F_y -y^2 F_{yy}}{y F_y-b F_b}\,,
+\mathcal{M}=   \frac{by F_{by}-y F_y -y^2 F_{yy}}{y F_y-b F_b}\,,
 \end{equation}
 and the inertia of the entropy mode is
 \begin{equation}
-A= \frac{y^2 F_{yy}}{y F_y-b F_b}\,.
+\mathcal{A}= \frac{y^2 F_{yy}}{y F_y-b F_b}\,.
 \end{equation}
 Crucially in this lagrangian only $p+\rho>0$ is necessary to avoid ghost instabilities.
-In case $\rho+p>0$, thermodynamic stability also demands $A>0$, however at this level the speed of sound $c_s^2$ can be negative.
+In case $\rho+p>0$, thermodynamic stability also demands $\mathcal{A}>0$, however at this level the speed of sound $c_s^2$ can be negative.
 
 The entropy mode is non propagating and can be integrated out as a constraint to get 
 \begin{equation}
-S_2=\int d^4xd^4x\sqrt{-g}\left(\frac{p+\rho}{2}\right)\left[\dot\pi^2-c_s^2\vert_{\rm{eff}}(\nabla\pi)^2\right]\ , 
+S_2=\int d^4xd^4x\sqrt{-g}\left(\frac{p+\rho}{2}\right)\left[\dot\pi^2-c_s^2(\nabla\pi)^2\right]\ , 
 \end{equation}
 where 
 \begin{equation}
