Updates from Overleaf

--- a/diego/nota_diego.tex
+++ b/diego/nota_diego.tex
@@ -442,8 +442,12 @@ The adiabatic sound speed is then by definition
     \\[5pt]
     &=\frac{-b^2F_{bb} F_{yy}+(F_y-bF_{yb})^2}{F_{yy}\,(yF_y-bF_b)} = \frac{b\,p_b \,y\rho_y + (y\,p_y)^2}{y \rho_y (\rho+p)}\,.
 \end{align}
-
-
+Using $F=-\mathfrak{a}$ and $s=F_y=-\partial_T\mathfrak{a}$ we rewrite it as
+\begin{align}
+    c_b^2:=
+    &=\frac{-b^2F_{bb} F_{yy}+(F_y-bF_{yb})^2}{F_{yy}\,(yF_y-bF_b)} = \frac{n^2\,\partial_n^2\mathfrak{a}\,\partial_Ts + (s-n\partial_ns)^2}{\partial_Ts\,\,(\rho+p)}\,,
+\end{align}
+which makes it manifest that $c_b^2\geq0$ provided no ghosts $\rho+P>0$, the second principle of thermodynamics $\partial_Ts\geq 0$ and thermodynamic stability $\partial_n^2\mathfrak{a}\geq 0$ hold.
 
 
 
