--- a/diego/bib.bib
+++ b/diego/bib.bib
@@ -36,3 +36,29 @@
     pages = "025034",
     year = "2016"
 }
+@article{Crossley:2015evo,
+    author = "Crossley, Michael and Glorioso, Paolo and Liu, Hong",
+    title = "{Effective field theory of dissipative fluids}",
+    eprint = "1511.03646",
+    archivePrefix = "arXiv",
+    primaryClass = "hep-th",
+    reportNumber = "MIT-CTP-4734",
+    doi = "10.1007/JHEP09(2017)095",
+    journal = "JHEP",
+    volume = "09",
+    pages = "095",
+    year = "2017"
+}
+@article{Liu:2018kfw,
+    author = "Liu, Hong and Glorioso, Paolo",
+    title = "{Lectures on non-equilibrium effective field theories and fluctuating hydrodynamics}",
+    eprint = "1805.09331",
+    archivePrefix = "arXiv",
+    primaryClass = "hep-th",
+    reportNumber = "MIT-CTP/5018; EFI-18-8, MIT-CTP-5018, EFI-18-8",
+    doi = "10.22323/1.305.0008",
+    journal = "PoS",
+    volume = "TASI2017",
+    pages = "008",
+    year = "2018"
+}
